--- a/views/detail.html
+++ b/views/detail.html
@@ -222,23 +222,23 @@
       {
         id: 1,
         name: "Xà phòng bơ",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg1-1.xx.fbcdn.net/v/t39.30808-6/486669653_1158073609670241_8169466598498292056_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHwXTQW_uhSTiK2GJicKD6k2ThXZe2_0c7ZOFdl7b_Rzs2EHBvTUmTXe6eqeUBBRPWaph2aKQzc9aqclXIF3FbV&_nc_ohc=CWedis8HNgMQ7kNvwE4NMeM&_nc_oc=Adlu18JO2w5Mx8-oC6VFl83R0LVwkLKEZH5fqhMIrjNGPFVxAGWcAvNgX1SKu9rYkDGxHc4CY-6uL_dkWqJPoxft&_nc_zt=23&_nc_ht=scontent-hkg1-1.xx&_nc_gid=TCJK7pdEhAPzxNrFSfWB_w&oh=00_AfRvCVcdiX88TvQTDkVjY4yp-DmhVwYz5uAA5eNGH_RLaw&oe=6871F378",
         description: "Xà phòng chăm sóc da từ quả bơ thiên nhiên, an toàn, đạt chuẩn OCOP.",
         ingredients: ["Dầu bơ", "Glycerin thực vật", "Tinh dầu tự nhiên", "Nước tinh khiết"],
         usage: "Làm ướt da, tạo bọt với xà phòng, massage nhẹ nhàng rồi rửa sạch."
       },
       {
         id: 2,
-        name: "Muối tắm bơ",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
-        description: "Muối tắm giúp làn da mịn màng, nhẹ dịu, chiết xuất từ thiên nhiên.",
+        name: "Son Dưỡng Bơ",
+        image: "https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/487491707_1161153536028915_3529404339162153376_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEgTk5lmZSdgCnajJvlLYaQv3o-gy0Lmwu_ej6DLQubCxhJRsPB32XqM7C2XmAT5cwMrBn9bVOFBHuYH6zYK_lL&_nc_ohc=GsuzI4pNurIQ7kNvwFAlhlP&_nc_oc=AdmuP9CRghfSdTzF3f7N8TY3Nm9DzywgKb73DqkQals7rMgoNfxpWAOqukwgHaK-o3GnpPkQg61qAOAiydH-aXk8&_nc_zt=23&_nc_ht=scontent-hkg1-2.xx&_nc_gid=rO1n8USz04S0DgO1Aj2iYA&oh=00_AfT57Wxw6uOK4j9lN89uVshYXexwuHdj9q3q2rAnhnVkwQ&oe=687208CD",
+        description: "Son dưỡng giúp mô mịn màng, nhẹ dịu, chiết xuất từ thiên nhiên.",
         ingredients: ["Muối biển", "Chiết xuất bơ", "Tinh dầu oải hương", "Vitamin E"],
-        usage: "Hòa 2-3 thìa muối vào bồn tắm, ngâm 15-20 phút, sau đó tắm lại."
+        usage: "Thoa lên môi 15-20 phút, sau đó rữa ."
       },
       {
         id: 3,
         name: "Dầu dưỡng bơ",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg4-1.xx.fbcdn.net/v/t39.30808-6/491680483_1181109017366700_9020989239897211970_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHKh5BrFwkSVOmgNi2GP0mreQbTQ8rIoFJ5BtNDysigUmf940LY7hpPKQsUEX9h-4RAd0GWywFC82IEpzxMNPWT&_nc_ohc=dk3iQ_h84XwQ7kNvwE2g4Li&_nc_oc=AdmWRmEQpX4a4tL-rNNzh7-ABPJpyr4qgkurfZFRLuJajzBLcCtvxskFLtPFAvQVA2Nlyax0hE--BlYYN4rjpm8G&_nc_zt=23&_nc_ht=scontent-hkg4-1.xx&_nc_gid=rimIf5EXk4n4ACmEaWe5Pw&oh=00_AfTQ7SE4o24SZ9a9mlu1USUCRM6opdnvA1aQlt5Wp2wmGQ&oe=6871E5A5",
         description: "Dầu dưỡng từ bơ và gấc, nuôi dưỡng làn da mềm mại, tự nhiên.",
         ingredients: ["Dầu bơ", "Dầu gấc", "Tinh dầu jojoba", "Vitamin C"],
         usage: "Thoa 3-5 giọt lên da sạch, massage nhẹ nhàng để dầu thấm sâu."
@@ -246,7 +246,7 @@
       {
         id: 4,
         name: "Xà phòng cà phê",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg4-2.xx.fbcdn.net/v/t39.30808-6/492519611_1182899207187681_7480159864053770769_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeECfEhsv4i84abV1kGiw-PeUSUJwq7i4h1RJQnCruLiHauwIQpetWDW0u6_yiZkCgJnv_rI9nJCY-KEe6rOsZt2&_nc_ohc=9brOpvyMM6AQ7kNvwFPMMIU&_nc_oc=AdnDl4xBbhheEQq0nfZtmffj6kjyoFtJ6lJDqhtEMG8IaBkTat9GIVhszbUadeNQRreGTORrqlbi-sduMmcgtL1x&_nc_zt=23&_nc_ht=scontent-hkg4-2.xx&_nc_gid=JGjaZ4_D8ZpR8ZgblZ2Ikw&oh=00_AfRfvPC-_24ceoqIanAiDjaIek4A1NZv17Dpacf-MJ19Gw&oe=6871D801",
         description: "Xà phòng cà phê robusta, tẩy tế bào chết, làm sáng da.",
         ingredients: ["Bột cà phê robusta", "Dầu dừa", "Tinh dầu bạc hà", "Glycerin"],
         usage: "Dùng để tắm hoặc rửa mặt, tạo bọt và massage 1-2 phút, rửa sạch."
@@ -254,7 +254,7 @@
       {
         id: 5,
         name: "Muối tắm gấc",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg1-1.xx.fbcdn.net/v/t39.30808-6/492252854_1181108950700040_3046694673579554221_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHzRm6ds_c2wGQPIWRNcjRW6hmIDlqCSq7qGYgOWoJKrldmxJi_MSDGwZywYuJJjIEkZqzA7KoTX8ZnObNAZ7LM&_nc_ohc=Ley4BQmr9E4Q7kNvwEu_7x3&_nc_oc=AdmvNGo8TxSYTZvYiY66mj4TMoEKsuWEdI1ZIEx13Ai-6Bb4lzGsZNrKpBZXIo6FiT_ER66qqphu2HxsN5xO6Y29&_nc_zt=23&_nc_ht=scontent-hkg1-1.xx&_nc_gid=bqwyMfVqkayA3KmS1X-pGw&oh=00_AfSX-7broG2GwmeyMyqDePX_xC_Ic1uxKxLQezt3y-E2Fg&oe=6871D9AA",
         description: "Muối tắm gấc, thư giãn và làm mềm da, đạt chuẩn OCOP.",
         ingredients: ["Muối biển", "Chiết xuất gấc", "Tinh dầu cam ngọt", "Khoáng chất"],
         usage: "Hòa muối vào nước ấm, ngâm cơ thể 15 phút, tắm lại với nước sạch."
@@ -262,7 +262,7 @@
       {
         id: 6,
         name: "Dầu dưỡng cà phê",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/514435473_1241130334697901_1000106559901061188_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH4i1z5lsuSNwyFtZwSakAdjc47vPav8l-Nzju89q_yX72twHwYrDItwBZWi0OKs80nZsTavhC9_d3ozRV-Oqne&_nc_ohc=iBoNEhks5-gQ7kNvwFcKoaa&_nc_oc=AdkXfIHwLX_Nv5WQ6fSpXH_ayPTQK3uYDgHC9W_OWPk5a1jyy4H93lvPhY8Rk1OuPvEATwLYkX_QoL_q7FDHcdRt&_nc_zt=23&_nc_ht=scontent-hkg1-2.xx&_nc_gid=wi972VsFBqdxoIZeYy6q6g&oh=00_AfTHVXGPulRpNIHoSp9syRjN7LRvNYv_QxDjtiQKJA8gDA&oe=6871EAE8",
         description: "Dầu dưỡng cà phê robusta, cấp ẩm sâu, phù hợp mọi loại da.",
         ingredients: ["Dầu cà phê", "Dầu argan", "Tinh dầu hương thảo", "Vitamin E"],
         usage: "Thoa dầu lên da sau khi tắm, massage đều để dưỡng chất thấm."
@@ -270,7 +270,7 @@
       {
         id: 7,
         name: "Xà phòng thiên nhiên",
-        image: "https://www.polangvietnam.com/wp-content/uploads/2025/01/kiotviet_c73c406a87aa88036d04e320c2dadb3c-466x500.jpg",
+        image: "https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/486669779_1158073953003540_9126201822364120411_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeGWYPf_dIaYflYzHp-ru_WLJPtpRxw6K0Ik-2lHHDorQpZHi40Ol64aghWEmPEQadpP14zKA2GgB1bKd3ZleRDA&_nc_ohc=4bWU-spilp8Q7kNvwEkokMD&_nc_oc=AdnL9NGMoPMlhwzaQ2ZwT2YtP-rGZAPjGE9lhi8pHoeFOW5LtrnD0VVRDU45Z46r2PyFWG6Q85AWJbeUZ5OnlbOz&_nc_zt=23&_nc_ht=scontent-hkg1-2.xx&_nc_gid=A7QtYvv6M9sQ3PUETN6NjA&oh=00_AfQ-euCfE66X7xR-lnGmln6SAh2CFmY_iOb3_jxQQ5PhnQ&oe=6871E256",
         description: "Giải pháp chăm sóc toàn diện từ bơ, gấc và cà phê robusta Tây Nguyên.",
         ingredients: ["Dầu bơ", "Chiết xuất gấc", "Bột cà phê", "Tinh dầu tự nhiên"],
         usage: "Tạo bọt và sử dụng trên da ướt, rửa sạch sau 1-2 phút."
