--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ section p {
 }
 
 .product-item {
-  background: #d0d9e1;
+  background: #bddeb4;
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
